Test/Bool/Assoc.expected
goal: (f p (f q r) == f (f p q) r) = true

query:
(declare-fun f (Bool Bool) Bool)
(declare-const p Bool)
(declare-const q Bool)
(declare-const r Bool)
(assert (not (= (= (f p (f q r)) (f (f p q) r)) true)))
(check-sat)

result: sat
Test/Bool/Assoc.lean:5:2: error: unable to prove goal, it is false
